--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,4 +8,114 @@
 body {
   font-family: "Josefin Sans", sans-serif;
   font-size: 16px;
+  color: #ce9797;
+}
+
+header {
+  min-height: 10vh;
+}
+
+header img {
+  padding: 2em;
+  width: 50%;
+  max-width: 190px;
+}
+
+.flex--display {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hero--section {
+  min-height: 30vh;
+}
+
+.hero--section .hero__section {
+  width: 100%;
+}
+
+.hero--section .hero__section img {
+  width: 100%;
+}
+
+.content--section {
+  min-height: 60vh;
+  text-align: center;
+  background: linear-gradient(135deg, #ffffff, #fff5f5);
+}
+
+.content--section .content__container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.content--section .content__container .container__text {
+  padding-top: 3em;
+}
+
+.content--section .content__container .container__text h1 {
+  font-size: 31px;
+  font-weight: 300;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+}
+
+.content--section .content__container .container__text h1 .text--colored {
+  color: #413a3a;
+  font-weight: 600;
+}
+
+.content--section .content__container .container__text p {
+  margin: 2em 0;
+  width: 100%;
+}
+
+.content--section form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding: 0;
+}
+
+.content--section form .email--input {
+  border-radius: 20em;
+  border: 1px solid #ce9797;
+  padding: 1em 2em;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  background: transparent;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.content--section form .email--input:placeholder-shown {
+  color: #ce9797;
+}
+
+.content--section form .button--submit {
+  border-radius: 20em;
+  padding: 1em 0;
+  width: 70px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  border: none;
+  background: linear-gradient(135deg, #f8bfbf, #ee8c8c);
+}
+
+.content--section form .button--submit:hover {
+  scale: 1.1;
+  -webkit-box-shadow: 0 10px 20px #ce9797;
+          box-shadow: 0 10px 20px #ce9797;
 }
