--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2,10 +2,14 @@
 $desaturatedRed: hsl(0, 36%, 70%);
 $softRed: hsl(0, 93%, 68%);
 $darkGrayishRed: hsl(0, 6%, 24%);
-$lightGradients: Linear, 135deg, from hsl(0, 0%, 100%), to hsl(0, 100%, 98%);
-$pinkGradients: Linear, 135deg, from hsl(0, 80%, 86%), to hsl(0, 74%, 74%);
-
-$font: "Josefin Sans", sans-serif;
+$lightGradients: 135deg,
+#ffffff,
+#fff5f5;
+$pinkGradients: 135deg,
+#f8bfbf,
+#ee8c8c;
+$font: "Josefin Sans",
+sans-serif;
 $fontSize: 16px;
 
 * {
@@ -17,4 +21,102 @@ $fontSize: 16px;
 body {
   font-family: $font;
   font-size: $fontSize;
+  color: $desaturatedRed;
+}
+
+header {
+  min-height: 10vh;
+
+  img {
+    padding: 2em;
+    width: 50%;
+    max-width: 190px;
+  }
+}
+
+.flex--display {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hero--section {
+  min-height: 30vh;
+
+  .hero__section {
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
+  }
+}
+
+.content--section {
+  min-height: 60vh;
+  text-align: center;
+  background: linear-gradient($lightGradients);
+
+  .content__container {
+    width: 80%;
+    margin: 0 auto;
+
+    .container__text {
+      padding-top: 3em;
+
+      h1 {
+        font-size: $fontSize + 15;
+        font-weight: 300;
+        letter-spacing: 10px;
+        text-transform: uppercase;
+
+        .text--colored {
+          color: $darkGrayishRed;
+          font-weight: 600;
+        }
+      }
+
+      p {
+        margin: 2em 0;
+        width: 100%;
+      }
+    }
+  }
+
+  form {
+    display: flex;
+    position: relative;
+    padding: 0;
+
+    .email--input {
+      border-radius: 20em;
+      border: 1px solid $desaturatedRed;
+      padding: 1em 2em;
+      flex: 1 1 auto;
+      background: transparent;
+      font-family: $font;
+
+      &:placeholder-shown {
+        color: $desaturatedRed;
+      }
+    }
+
+    .button--submit {
+      border-radius: 20em;
+      padding: 1em 0;
+      width: 70px;
+      cursor: pointer;
+      position: absolute;
+      bottom: 0;
+      top: 0;
+      right: 0;
+      border: none;
+      background: linear-gradient($pinkGradients);
+
+      &:hover {
+        scale: 1.1;
+        box-shadow: 0 10px 20px $desaturatedRed;
+      }
+    }
+  }
 }
