--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,21 +7,77 @@
 
 body {
   font-family: "Josefin Sans", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   color: #ce9797;
+  background-image: linear-gradient(135deg, #ffffff, #fff5f5);
+}
+
+@media screen and (max-width: 400px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+.grid-parent {
+  min-height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 40%;
+      grid-template-columns: 1fr 40%;
+  -ms-grid-rows: 150px 1fr;
+      grid-template-rows: 150px 1fr;
+      grid-template-areas: "header asidePicture" "sectionContent asidePicture ";
+  background-image: url(../../images/bg-pattern-desktop.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (max-width: 1000px) {
+  .grid-parent {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 100px 300px 1fr;
+        grid-template-rows: 100px 300px 1fr;
+        grid-template-areas: "header" "asidePicture" "sectionContent";
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .grid-parent {
+    background-image: linear-gradient(135deg, #ffffff, #fff5f5);
+  }
+}
+
+.container {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 2em;
+}
+
+@media screen and (max-width: 400px) {
+  .container {
+    padding: 0 0 0 2em;
+  }
 }
 
 header {
-  min-height: 10vh;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: header;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-header img {
-  padding: 2em;
-  width: 50%;
-  max-width: 190px;
-}
-
-.flex--display {
+.content--section {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: sectionContent;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -29,56 +85,73 @@ header img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
-.hero--section {
-  min-height: 30vh;
+@media screen and (max-width: 400px) {
+  .content--section {
+    padding: 0 1em;
+  }
 }
 
-.hero--section .hero__section {
+.content--section .content {
+  max-width: 500px;
   width: 100%;
 }
 
-.hero--section .hero__section img {
-  width: 100%;
+@media screen and (max-width: 1000px) {
+  .content--section .content {
+    padding-bottom: 2em;
+    max-width: 375px;
+  }
 }
 
-.content--section {
-  min-height: 60vh;
-  text-align: center;
-  background: linear-gradient(135deg, #ffffff, #fff5f5);
+@media screen and (max-width: 400px) {
+  .content--section .content {
+    text-align: center;
+  }
 }
 
-.content--section .content__container {
-  width: 80%;
-  margin: 0 auto;
-}
-
-.content--section .content__container .container__text {
+.content--section .content .content__text {
   padding-top: 3em;
 }
 
-.content--section .content__container .container__text h1 {
-  font-size: 31px;
+.content--section .content .content__text h1 {
+  font-size: 51px;
   font-weight: 300;
-  letter-spacing: 10px;
   text-transform: uppercase;
+  letter-spacing: 10px;
 }
 
-.content--section .content__container .container__text h1 .text--colored {
+@media screen and (max-width: 400px) {
+  .content--section .content .content__text h1 {
+    font-size: 26px;
+  }
+}
+
+.content--section .content .content__text h1 .title--colored {
   color: #413a3a;
-  font-weight: 600;
+  font-weight: 400;
+  font-size: 86px;
 }
 
-.content--section .content__container .container__text p {
-  margin: 2em 0;
-  width: 100%;
+@media screen and (max-width: 400px) {
+  .content--section .content .content__text h1 .title--colored {
+    font-size: 40px;
+  }
 }
 
-.content--section form {
+.content--section .content .content__text p {
+  padding: 3em 0;
+  line-height: 1.5;
+}
+
+@media screen and (max-width: 400px) {
+  .content--section .content .content__text p {
+    padding: 1em 0;
+  }
+}
+
+.content--section .content form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -86,7 +159,7 @@ header img {
   padding: 0;
 }
 
-.content--section form .email--input {
+.content--section .content form .email--input {
   border-radius: 20em;
   border: 1px solid #ce9797;
   padding: 1em 2em;
@@ -95,16 +168,17 @@ header img {
           flex: 1 1 auto;
   background: transparent;
   font-family: "Josefin Sans", sans-serif;
+  opacity: 0.6;
 }
 
-.content--section form .email--input:placeholder-shown {
+.content--section .content form .email--input:placeholder-shown {
   color: #ce9797;
 }
 
-.content--section form .button--submit {
+.content--section .content form .button--submit {
   border-radius: 20em;
   padding: 1em 0;
-  width: 70px;
+  width: 80px;
   cursor: pointer;
   position: absolute;
   bottom: 0;
@@ -112,10 +186,53 @@ header img {
   right: 0;
   border: none;
   background: linear-gradient(135deg, #f8bfbf, #ee8c8c);
-}
-
-.content--section form .button--submit:hover {
-  scale: 1.1;
   -webkit-box-shadow: 0 10px 20px #ce9797;
           box-shadow: 0 10px 20px #ce9797;
+}
+
+.content--section .content form .button--submit:hover {
+  opacity: 0.7;
+}
+
+.content--section .content form .icon--error {
+  position: absolute;
+  top: 25%;
+  right: 25%;
+  display: none;
+}
+
+.content--section .content form .icon--error-active {
+  display: inline;
+}
+
+.content--section .content .message--error {
+  position: absolute;
+  top: 60px;
+  left: 25px;
+}
+
+aside {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 2;
+  grid-area: asidePicture;
+  height: 100%;
+  width: 100%;
+}
+
+aside .hero__img {
+  height: 100%;
+  width: 100%;
+  background-image: url(../../images/hero-desktop.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media screen and (max-width: 1000px) {
+  aside .hero__img {
+    background-image: url(../../images/hero-mobile.jpg);
+    background-position: top;
+    background-size: cover;
+  }
 }
