--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -12,6 +12,23 @@ $font: "Josefin Sans",
 sans-serif;
 $fontSize: 16px;
 
+// Breakpoints
+$mobile-max: 400px;
+$tablet-max: 1000px;
+
+// Mixin
+@mixin screen-for-tablet {
+  @media screen and (max-width: #{$tablet-max}) {
+    @content;
+  }
+}
+
+@mixin screen-for-mobile {
+  @media screen and (max-width: #{$mobile-max}) {
+    @content;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -20,103 +37,191 @@ $fontSize: 16px;
 
 body {
   font-family: $font;
-  font-size: $fontSize;
+  font-size: $fontSize + 2;
   color: $desaturatedRed;
+  background-image: linear-gradient($lightGradients);
+
+  @include screen-for-mobile {
+    font-size: $fontSize;
+  }
+}
+
+.grid-parent {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 40%;
+  grid-template-rows: 150px 1fr;
+  grid-template-areas:
+    "header asidePicture"
+    "sectionContent asidePicture ";
+  background-image: url(../../images/bg-pattern-desktop.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  @include screen-for-tablet {
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 300px 1fr;
+    grid-template-areas:
+      "header"
+      "asidePicture"
+      "sectionContent";
+  }
+
+  @include screen-for-mobile {
+    background-image: linear-gradient($lightGradients);
+  }
+}
+
+.container {
+  max-width: 500px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 2em;
+
+  @include screen-for-mobile {
+    padding: 0 0 0 2em;
+  }
 }
 
 header {
-  min-height: 10vh;
-
-  img {
-    padding: 2em;
-    width: 50%;
-    max-width: 190px;
-  }
-}
-
-.flex--display {
+  grid-area: header;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.hero--section {
-  min-height: 30vh;
-
-  .hero__section {
-    width: 100%;
-
-    img {
-      width: 100%;
-    }
-  }
+  align-items: center;
 }
 
 .content--section {
-  min-height: 60vh;
-  text-align: center;
-  background: linear-gradient($lightGradients);
+  grid-area: sectionContent;
+  display: flex;
+  flex-direction: column;
 
-  .content__container {
-    width: 80%;
-    margin: 0 auto;
+  @include screen-for-mobile {
+    padding: 0 1em;
+  }
 
-    .container__text {
+
+  .content {
+    max-width: 500px;
+    width: 100%;
+
+    @include screen-for-tablet {
+      padding-bottom: 2em;
+      max-width: 375px;
+    }
+
+    @include screen-for-mobile {
+      text-align: center;
+    }
+
+    .content__text {
       padding-top: 3em;
 
       h1 {
-        font-size: $fontSize + 15;
+        font-size: $fontSize + 35;
         font-weight: 300;
-        letter-spacing: 10px;
         text-transform: uppercase;
+        letter-spacing: 10px;
 
-        .text--colored {
+        @include screen-for-mobile {
+          font-size: $fontSize + 10;
+        }
+
+        .title--colored {
           color: $darkGrayishRed;
-          font-weight: 600;
+          font-weight: 400;
+          font-size: $fontSize + 70;
+
+          @include screen-for-mobile {
+            font-size: $fontSize + 24;
+          }
         }
       }
 
       p {
-        margin: 2em 0;
-        width: 100%;
+        padding: 3em 0;
+        line-height: 1.5;
+
+        @include screen-for-mobile {
+          padding: 1em 0;
+        }
       }
+    }
+
+    form {
+      display: flex;
+      position: relative;
+      padding: 0;
+
+      .email--input {
+        border-radius: 20em;
+        border: 1px solid $desaturatedRed;
+        padding: 1em 2em;
+        flex: 1 1 auto;
+        background: transparent;
+        font-family: $font;
+        opacity: 0.6;
+
+        &:placeholder-shown {
+          color: $desaturatedRed;
+        }
+      }
+
+      .button--submit {
+        border-radius: 20em;
+        padding: 1em 0;
+        width: 80px;
+        cursor: pointer;
+        position: absolute;
+        bottom: 0;
+        top: 0;
+        right: 0;
+        border: none;
+        background: linear-gradient($pinkGradients);
+        box-shadow: 0 10px 20px $desaturatedRed;
+
+        &:hover {
+          // scale: 1.1;
+          opacity: 0.7;
+        }
+      }
+
+      .icon--error {
+        position: absolute;
+        top: 25%;
+        right: 25%;
+        display: none;
+
+        &-active {
+          display: inline;
+        }
+      }
+    }
+
+    .message--error {
+      position: absolute;
+      top: 60px;
+      left: 25px;
     }
   }
+}
 
-  form {
-    display: flex;
-    position: relative;
-    padding: 0;
+aside {
+  grid-area: asidePicture;
+  height: 100%;
+  width: 100%;
 
-    .email--input {
-      border-radius: 20em;
-      border: 1px solid $desaturatedRed;
-      padding: 1em 2em;
-      flex: 1 1 auto;
-      background: transparent;
-      font-family: $font;
+  .hero__img {
+    height: 100%;
+    width: 100%;
+    background-image: url(../../images/hero-desktop.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 
-      &:placeholder-shown {
-        color: $desaturatedRed;
-      }
-    }
-
-    .button--submit {
-      border-radius: 20em;
-      padding: 1em 0;
-      width: 70px;
-      cursor: pointer;
-      position: absolute;
-      bottom: 0;
-      top: 0;
-      right: 0;
-      border: none;
-      background: linear-gradient($pinkGradients);
-
-      &:hover {
-        scale: 1.1;
-        box-shadow: 0 10px 20px $desaturatedRed;
-      }
+    @include screen-for-tablet {
+      background-image: url(../../images/hero-mobile.jpg);
+      background-position: top;
+      background-size: cover;
     }
   }
 }
